<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginBottom="2dp">

        <ImageView
            android:id="@+id/im_movie_poster"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/ic_baseline_video_settings"
            android:contentDescription="@string/movie_poster_cd" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/movie_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_title_txt"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp" />


                <TextView
                    android:id="@+id/qualification_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/movie_qualification_tv"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/date_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date_txt"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/aged_rated_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age_rating_txt"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


        </LinearLayout>

        <TextView
            android:id="@+id/btn_inspect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:background="@drawable/corner_btn_border_blue"
            android:padding="2dp"
            android:layout_marginEnd="5dp"
            android:text="@string/view_detail_txt"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="15sp" />



    </LinearLayout>


