<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movies.ui.MovieDetailFragment">

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/img_slider"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        app:iss_auto_cycle="true"
        app:iss_corner_radius="5"
        app:iss_delay="0"
        app:iss_error_image="@color/gray"
        app:iss_period="2000"
        app:iss_placeholder="@color/gray"
        app:iss_selected_dot="@drawable/default_selected_dot"
        app:iss_title_background="@color/transparent"
        app:iss_unselected_dot="@drawable/default_unselected_dot"
        app:layout_constraintBottom_toTopOf="@id/movie_detail_title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_detail_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/movie_title_txt"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_slider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/movie_detail_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_detail_title_tv">

        <LinearLayout
            android:id="@+id/container_info_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/category_tv"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/age_rating_txt"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/rate_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/movie_qualification_tv"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/status_tv"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/status_txt"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/original_language_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/original_language_txt"

                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/release_date_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/release_date_txt"

                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/budget_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/budget_txt"

                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/revenue_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/total_revenue_txt"
                android:textColor="@color/black"

                android:textSize="16sp" />


            <TextView
                android:id="@+id/tagline_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>


    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:textSize="12sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/return_txt"
        app:backgroundTint="#E91E63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/no_data_layout"
        layout="@layout/no_connection_layout"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>